# Digilogic

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  compile_commands.json  logs
.cache/clangd/index/: main.c.E145A2BE30929DBC.idx
include/lib/: array.h
include/scene/: controls.h
src/: app.cpp  app.hpp  button.cpp  button.hpp  camera.cpp  camera.hpp  component.cpp  component.hpp  fontbank.cpp  fontbank.hpp  main.c  main.cpp  object.cpp  object.hpp  scene.cpp  scene.hpp  truthtable.cpp  truthtable.hpp  ui.cpp  ui.hpp
src/component/: component.c  component.cpp  component.h  component.hpp  componentgroup.cpp  componentgroup.hpp  state.h  truthtable.c  truthtable.cpp  truthtable.h  truthtable.hpp
src/font/: fontbank.cpp
src/lib/: array.c  array.h
src/scene/: button.c  button.h  controls.c  controls.h  scene.c  scene.h
src/ui/: button.cpp  button.hpp  calculate_layout.cpp  container.cpp  container.hpp  modal.cpp  modal.hpp  textlabel.cpp  textlabel.hpp  ui.cpp  ui.hpp
src/ui/button/: button.cpp  button.hpp
src/ui/container/: border_percent.cpp  container.cpp  container.hpp  gap_percent.cpp
src/ui/layout/: calculate.cpp  layout.cpp  layout.hpp
src/ui/modal/: modal.cpp  modal.hpp
src/ui/set_ui/: set_ui.cpp  set_ui.hpp
src/ui/set_ui/containers/: main_ui.cpp
src/ui/set_ui/modals/: component_group_modal.cpp  exit_modal.cpp
src/ui/textlabel/: textlabel.cpp  textlabel.hpp
src/utils/: utils.c  utils.h
tests/: test_components.cpp
